// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Theme: jobStreet Baseline disabled 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
    style="transform: none;"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: jobStreet Baseline disabled 2`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
    style="transform: none;"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: jobStreet Color 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__positive fontFamily__body fontSize__body fontWeight__regular"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: jobStreet Color 2`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__positive fontFamily__body fontSize__body fontWeight__regular"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: jobStreet Default 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: jobStreet Default 2`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: jobStreet List item 1`] = `
<li
  class="Text__block Text__listItem Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
  >
    Children
  </span>
</li>
`;

exports[`Text Theme: jobStreet List item 2`] = `
<li
  class="Text__block Text__listItem Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
  >
    Children
  </span>
</li>
`;

exports[`Text Theme: jobStreet Size 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__large fontWeight__regular"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: jobStreet Size 2`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__large fontWeight__regular"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: jobStreet Weight 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__strong"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: jobStreet Weight 2`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__strong"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: seekAnz Baseline disabled 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
    style="transform: none;"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: seekAnz Color 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__positive fontFamily__body fontSize__body fontWeight__regular"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: seekAnz Default 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: seekAnz List item 1`] = `
<li
  class="Text__block Text__listItem Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
  >
    Children
  </span>
</li>
`;

exports[`Text Theme: seekAnz Size 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__large fontWeight__regular"
  >
    Children
  </span>
</div>
`;

exports[`Text Theme: seekAnz Weight 1`] = `
<div
  class="Text__block Box__root borderColor__default"
>
  <span
    class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__strong"
  >
    Children
  </span>
</div>
`;
